# AiDiy2026

./: .editorconfig  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CLAUDE_IMPROVED.md  CONTRIBUTING.md  LICENSE  README.md  _AIDIY.md  _AiDiy.md  _cleanup.py  _replace_vrm.py  _run_electron_binary_only.py  _setup.py  _setup_avatar.py  _setup_ng.py  _setup_old.py  _start.py  _start_avatar.py  _stop.py  aidiy_hermes.cmd  aidiy_hermesのwindows対応作業.md  check_encoding.py  delete_files.py  electron起動不具合対応.md  fix_encoding_temp.py  fix_vue_rename.js  fix_vue_rename.py  get_audio_durations.py  replace_text.js  replace_text.py  replace_text.sh  temp_stderr.txt  temp_tables.txt  このシステムの歩き方.md  ビデオ.md
backend_hermes/: AGENTS.md  AIDIY-HERMESロゴ.txt  NOTICE.md  _cleanup.py  _setup.py  _start.py  check_claude_api.py  cli_main.py  logo_AIDIY-HERMES.txt  pyproject.toml  requirements.txt  setup.py  tui画面出す.bat
backend_hermes/base/: batch_runner.py  hermes_constants.py  hermes_time.py  model_tools.py  toolsets.py  utils.py
backend_hermes/core/: account_usage.py  anthropic_adapter.py  auxiliary_client.py  bedrock_adapter.py  codex_responses_adapter.py  context_compressor.py  context_references.py  credential_pool.py  credential_sources.py  display.py  error_classifier.py  gemini_cloudcode_adapter.py  gemini_native_adapter.py  google_code_assist.py  image_gen_provider.py  model_metadata.py  models_dev.py  nous_rate_guard.py  prompt_builder.py  run_agent.py  skill_commands.py  title_generator.py
backend_hermes/environments/: agent_loop.py
backend_hermes/hermes_cli/: azure_detect.py  banner.py  callbacks.py  config.py  debug.py  doctor.py  kanban_db.py  main.py  memory_setup.py  model_catalog.py  oneshot.py  plugins.py  profiles.py  providers.py  runtime_provider.py  setup.py  skills_hub.py  skin_engine.py  slack_cli.py  status.py  tools_config.py  uninstall.py  webhook.py
backend_hermes/tools/: browser_camofox.py  checkpoint_manager.py  code_execution_tool.py  credential_files.py  debug_helpers.py  file_tools.py  managed_tool_gateway.py  mixture_of_agents_tool.py  openrouter_client.py  planning_tools.py  process_registry.py  process_registry_win.py  registry.py  rl_training_tool.py  session_search_tool.py  skills_hub.py  terminal_tool.py  terminal_tool_linux.py  tirith_security.py  todo_tool.py  tts_tool.py  url_safety.py  vision_tool.py  vision_tools.py  web_tools.py  yuanbao_tools.py
backend_local/: AGENTS.md  _cleanup.py  _setup.py  _start.py  download_model.py  local_main.py  log_config.py  pyproject.toml
backend_local/local_proc/: __init__.py  aidiy_config.py  gemma_engine.py  gemma_tools.py  model_paths.py  openai_api.py
backend_mcp/: AGENTS.md  gen_narration.py  log_config.py  mcp_main.py  mcp_stdio.py  mcp_test_chrome.py  mcp_test_ss.py  package-lock.json  package.json  pyproject.toml  test_chrome_manager.py  test_image.py  test_tts_fallback.py  test_voice.py  update_scenario_duration.py
backend_mcp/aidiy_automations/: README.md  video_generation.py  video_generation_guide.py  video_generation_news.py  video_generation_steps.json  video_generation_紹介.py  video_generation_解説.py
backend_mcp/mcp_proc/: __init__.py  backup_check.py  backup_save.py  chrome_devtools.py  chrome_manager.py  code_agents.py  code_checker.py  desktop_capture.py  ffmpeg_control.py  image_generation.py  log_tailer.py  movie_generation.py  obs_studio_control.py  postgres_query.py  screen_capture.py  speech_to_text.py  sqlite_query.py  text_to_speech.py  tools_agents.py  tools_backup.py  tools_chrome.py  tools_desktop.py  tools_dev.py  tools_media.py
backend_mcp/tests/: README.md  test_agents.py  test_capture.py  test_chrome.py  test_chrome_manager.py  test_image.py  test_mcp_smoke.py  test_movie.py  test_post_api_smoke.py  test_tts_stt.py
backend_server/: .gitignore  AGENTS.md  _cleanup.py  _setup.py  _start.py  apps_main.py  apps_schema.py  auth.py  core_main.py  core_schema.py  database.py  deps.py  list_controls.py  log_config.py  main1.py  main2.py  pyproject.toml  schemas.py  ws_manager.py
backend_server/AIコア/: AIコード.py  AIコード_claude.py  AIコード_cli.py  AIコード_etc.py  AIストリーミング処理.py  AIセッション管理.py  AIソケット管理.py  AIチャット.py  AIチャット_gemini.py  AIチャット_local.py  AIチャット_ollama.py  AIチャット_openrt.py  AIバックアップ.py  AIライブ.py  AIライブ_gemini.py  AIライブ_openai.py  AI内部ツール.py  AI音声処理.py  AI音声認識.py  RiKi_AiDiy_AコアAI_agent_claude.py  __init__.py
backend_server/AコアAI/: __init__.py  audio_processing.py  backup.py  chat.py  chat_gemini.py  chat_openrt.py  code.py  code_claude.py  live.py  live_gemini.py  live_openai.py  live_tools.py  recognition.py  streaming.py
backend_server/_config/: AiDiy_chat__context.json  AiDiy_code__context.json  AiDiy_code_claude_cli.json  AiDiy_code_codex_cli.json  AiDiy_code_copilot_cli.json  AiDiy_code_gemini_cli.json  AiDiy_code_hermes_cli.json  AiDiy_live__context.json  AiDiy_live_gemini.json  AiDiy_live_openai.json  AiDiy_mcp.json
backend_server/apps_crud/: M取引先.py  M取引先分類.py  M商品.py  M商品分類.py  M商品構成.py  M工程.py  M生産区分.py  M生産工程.py  M車両.py  M配車区分.py  T商品入庫.py  T商品出庫.py  T商品棚卸.py  T生産.py  T配車.py  __init__.py  init.py  seed_data.py  utils.py
backend_server/apps_models/: M取引先.py  M取引先分類.py  M商品.py  M工程.py  (+12 more)
backend_task/: AGENTS.md  _cleanup.py  _setup.py  _start.py  pyproject.toml  sub_init.py  sub_proc.py  sub_start.py  sub_terminate.py  task_main.py
backend_team/: AGENTS.md  _cleanup.py  _setup.py  _start.py  log_config.py  pyproject.toml  sub_init.py  team_main.py
backend_tools/: AGENTS.md  _cleanup.py  _setup.py  _start.py  log_config.py  mcp_main.py  mcp_stdio.py  pyproject.toml  tools_main.py
frontend_gui/: README.md  log_config.py  main.py  pyproject.toml  settings.json  util.py
(+2448 files in other folders)
