[project]
name = "aidiy-hermes"
version = "0.1.0"
description = "AiDiy code agent CLI (hermes)"
requires-python = ">=3.13"
dependencies = [
    "openai",
    "anthropic",
    "google-genai",
    "pyyaml",
    "prompt-toolkit",
    "rich",
    "requests",
    "fire",
    "httpx[socks]",
    "python-dotenv",
    "pydantic",
    "websockets",
    "fal-client",
    "mcp",
    "windows-curses; sys_platform == 'win32'",
]
