[project]
name = "aidiy-backend-local"
version = "0.1.0"
description = "HuggingFace Gemma モデルを OpenAI / ChatGPT 互換 API で提供するローカル推論サーバー"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.37.0",
    "pydantic>=2.0.0",
    "transformers>=4.56.0",
    "torch>=2.2.0",
    "accelerate>=0.30.0",
    "huggingface-hub>=0.25.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.0.0",
    "pillow>=10.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
