[project]
name = "aidiy-backend-local"
version = "0.1.0"
description = "HuggingFace Gemma モデルを OpenAI / ChatGPT 互換 API で提供するローカル推論サーバー"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "transformers",
    "torch",
    "accelerate",
    "huggingface-hub",
    "sentencepiece",
    "protobuf",
    "pillow",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
