[project]
name = "chrome-devtools-mcp"
version = "0.1.0"
description = "Chrome DevTools Protocol を MCP ツールとして公開するサーバー"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
    "websockets>=12.0",
    "Pillow>=10.0.0",
    "screeninfo>=0.8.1",
    "pyautogui>=0.9.54",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
