[project]
name = "aidiy-backend-task"
version = "0.1.0"
description = "AiDiy background task server"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
