[project]
name = "chrome-devtools-mcp"
version = "0.1.0"
description = "Chrome DevTools Protocol を MCP ツールとして公開するサーバー"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastapi>=0.100.0",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
    "websockets>=12.0",
    "Pillow>=10.0.0,<12",
    "screeninfo>=0.8.1",
    "pyautogui>=0.9.54",
    "psycopg[binary]>=3.1.0",
    "edge-tts>=6.1.0",
    "google-genai>=1.54.0",
    "openai>=2.36.0",
    "anthropic>=0.76.0",
    "requests>=2.33.1",
    "speechrecognition>=3.10.0",
    "lameenc>=1.8.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
