[project]
name = "chrome-devtools-mcp"
version = "0.1.0"
description = "Chrome DevTools Protocol を MCP ツールとして公開するサーバー"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "fastapi",
    "starlette",
    "uvicorn",
    "websockets",
    "Pillow",
    "screeninfo",
    "pyautogui",
    "psycopg[binary]",
    "edge-tts",
    "google-genai",
    "openai",
    "anthropic",
    "claude-agent-sdk",
    "requests",
    "speechrecognition",
    "lameenc",
    "uiautomation",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
